# EEP596-CV

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
homework/hw1/: Assignment1.py  HW1.docx
homework/hw1/report/: report.html
homework/hw2/: HW2.docx  assignment2.py
homework/hw2/report/: report.html
homework/hw3/: Assignment3.py  HW3.docx  generate_report.py
homework/hw3/report/: assignment3_report.html
homework/hw4/: Assignment4.py  HW4.docx  cifar_net_2epoch.pth  cifar_net_2epoch_gpu.pth  generate_report.py
homework/hw4/report/: assignment4_report.html
