[project]
name = "eep596-cv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "filelock==3.19.1",
    "fonttools==4.60.1",
    "fsspec==2025.9.0",
    "jinja2==3.1.6",
    "kiwisolver==1.4.9",
    "markupsafe==3.0.3",
    "matplotlib==3.10.6",
    "mpmath==1.3.0",
    "networkx==3.5",
    "numpy==2.2.6",
    "opencv-python==4.12.0.88",
    "packaging==25.0",
    "pillow==11.3.0",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "scipy==1.16.2",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sympy==1.14.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "typing-extensions==4.15.0",
]
